--- a/PrototipoRamfis/about.html
+++ b/PrototipoRamfis/about.html
@@ -91,6 +91,12 @@
             <div class="aboutheading">
                <h3>Sobre <span class="orange_color">Nosotros</span></h3>
             </div>
+            <div class="row">
+               <div class="col-md-12">
+                  <p class="justificar">Somos una empresa panameña dedicada a ayudar a residentes y extranjeros, a conocer las hermosas maravillas que ofrece nuestro istmo.
+                  </p>
+               </div>
+            </div>
          </div>
       </div>
    </div>
