--- a/Juego Quiz/index.html
+++ b/Juego Quiz/index.html
@@ -74,6 +74,19 @@
                 <input type="radio" value="3" name="p4" onclick="respuesta(4,this)"> Ottawa
             </label>
         </section>
+        <section id="p5">
+            <h3>6- ¿Cuál es la capital de Panamá?</h3>
+            <label>
+                <input type="radio" value="1" name="p5" onclick="respuesta(5,this)"> Brasilia
+            </label>
+            <label>
+                <input type="radio" value="2" name="p5" onclick="respuesta(5,this)"> Bogotá
+            </label>
+            <label>
+                <input type="radio" value="3" name="p5" onclick="respuesta(5,this)"> Panamá
+            </label>
+        </section>
+
 
         <button onclick="corregir()">CORREGIR</button>
         <h2>Cantidad acertadas: <span id="resultado"></span></h2>
