--- a/Juego Tic Tac Toe (Juego de X y O)/index.html
+++ b/Juego Tic Tac Toe (Juego de X y O)/index.html
@@ -11,7 +11,7 @@
 <body>
     <main class="background">
         <section class="title">
-            <h1>Tic Tac Toe</h1>
+            <h1>Tic Tac Toe - Juego de X 0</h1>
         </section>
         <section class="display">
             Player <span class="display-player playerX">X</span>'s turn
